# reflector-cpp

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  cmake_gen.sh  config.toml  docker_build.sh  docker_test.sh  release.sh  renovate.json  version.sh
.github/workflows/: ci.yml  release.yml  tag-version-check.yml
docs/superpowers/plans/: 2026-05-29-ssdp-reflection-multicast.md  2026-05-29-unified-config.md  2026-05-30-ssdp-unicast-proxy.md  2026-06-01-ssdp-dial-proxy.md
docs/superpowers/specs/: 2026-05-29-ssdp-reflection-design.md  2026-05-29-unified-config-design.md  2026-05-30-ssdp-unicast-proxy-design.md  2026-06-01-ssdp-dial-proxy-design.md
e2e/: config-addrchange.toml  config-dial.toml  config.toml  probe.py  run.py
e2e/valgrind/: Dockerfile  flood.py  soak.py  soak_massif.py  soak_rss.py
src/: CMakeLists.txt  main.cpp
src/reflector/: CMakeLists.txt  address_monitor.cpp  address_monitor.h  application.cpp  application.h  checksum.cpp  checksum.h  config.cpp  config.h  default_address_monitor.cpp  default_address_monitor.h  default_packet_dispatcher.cpp  default_packet_dispatcher.h  dial_proxy.cpp  dial_proxy.h  dispatcher.cpp  dispatcher.h  dynamic_family_reflector.cpp  dynamic_family_reflector.h  error.cpp  error.h  event_loop_dispatcher.cpp  event_loop_dispatcher.h  family_capability.cpp  family_capability.h  frame_builder.cpp  frame_builder.h  http_message.cpp  http_message.h  interface.cpp  interface.h  interface_address.cpp  interface_address.h  ip_address.cpp  ip_address.h  ip_endpoint.h  link_socket.h  logger.h  mac_address.cpp  mac_address.h  (+38 more)
src/reflector/config/: CMakeLists.txt  address_family.h  config.cpp  config.h  entries.cpp  entries.h
src/reflector/util/: address_family_pair.h  ascii.h  byte_order.h  delegate.h  fd_util.h  narrow_cast.h  no_copy.h  no_move.h  registration.h  send_buffer.h  shared_ptr_unsynchronized.h  start_lifetime_as.h  stream_buffer.h  unique_fd.h
tests/: CMakeLists.txt  address_family_pair_test.cpp  address_monitor_test.cpp  application_test.cpp  checksum_test.cpp  config_test.cpp  default_address_monitor_test.cpp  default_packet_dispatcher_test.cpp  delegate_test.cpp  dial_proxy_test.cpp  dispatcher_root_test.cpp  dispatcher_test.cpp  error_test.cpp  event_loop_dispatcher_test.cpp  family_capability_test.cpp  frame_builder_test.cpp  http_message_test.cpp  interface_address_test.cpp  interface_test.cpp  ip_address_test.cpp  ip_endpoint_test.cpp  logger_test.cpp  mac_address_test.cpp  mdns_message_test.cpp  mdns_reflector_test.cpp  packet_capture_socket_root_test.cpp  packet_capture_socket_test.cpp  packet_dispatcher_test.cpp  packet_helpers.h  port_reservation_test.cpp  raw_socket_test.cpp  registration_test.cpp  send_buffer_test.cpp  ssdp_message_test.cpp  ssdp_reflector_test.cpp  stream_buffer_test.cpp  tcp_socket_test.cpp  test_helpers.h  timer_test.cpp  udp_link_fanout_sender_test.cpp  (+5 more)
tests/mocks/: fake_address_monitor.h  fake_dispatcher.h  fake_interface.h  fake_link_socket.h  fake_packet_dispatcher.h  fake_receive_socket.h  recording_udp_sender.h
tests/util/: udp_socket.cpp  udp_socket.h
